--- a/components/pages.templ
+++ b/components/pages.templ
@@ -18,7 +18,7 @@ templ layout() {
 			<title>FPL Buddy</title>
 			<script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
 		</head>
-		<body hx-boost="true" class="m-auto max-w-4xl p-4">
+		<body class="m-auto max-w-4xl p-4">
 			<header>
 				<nav class="flex flex-col sm:flex-row gap-4 justify-between items-center">
 					<div class="flex flex-col sm:flex-row gap-2 items-center justify-between w-full">
