add proper fdr feature

--- a/components/components.templ
+++ b/components/components.templ
@@ -87,7 +87,7 @@ templ EntrySummary() {
 templ PlayerSearchBar(results []core.Player) {
 	<div
 		id="search"
-		class="flex flex-col place-content-center"
+		class="w-full flex flex-col place-content-center"
 	>
 		<input
 			id="search-input"
@@ -183,13 +183,45 @@ templ PlayerGridCard(p core.Player) {
 	</a>
 }
 
-templ FDRSchedule(fdr []core.FDREntry) {
-	<div class="flex flex-col gap-4">
-		<h2>Next 5 Gameweeks</h2>
-		<div class="flex gap-4">
-			for _, f := range fdr {
-				<div class="flex flex-col gap-2 p-2 rounded-sm font-semibold text-lg min-w-16 text-center" data-difficulty={ strconv.Itoa(f.Difficulty) }>
-					<p class="uppercase">{ shared.GetCodeFromClubId(f.OpponentId) }</p>
+templ PlayerKeyStats(p core.Player) {
+	<div class="flex flex-col gap-2">
+		<h2>Stats</h2>
+		<div class="flex gap-2">
+			<div class="w-20 h-12 font-mono border-2 border-zinc-700 rounded-full flex flex-col items-center justify-center">
+				<p>{ strconv.Itoa(p.GwScore) }<span class="text-sm">pts</span></p>
+				<small class="text-xs text-zinc-500">Points</small>
+			</div>
+			<div class="w-20 h-12 font-mono border-2 border-zinc-700 rounded-full flex flex-col items-center justify-center">
+				<p>{ strconv.FormatFloat(p.NowCost, 'f', -1, 32) }<span class="text-sm">m</span></p>
+				<small class="text-xs text-zinc-500">Cost</small>
+			</div>
+			<div class="w-20 h-12 font-mono border-2 border-zinc-700 rounded-full flex flex-col items-center justify-center">
+				<p>{ strconv.FormatFloat(p.Form, 'f', 1, 32) }</p>
+				<small class="text-xs text-zinc-500">Form</small>
+			</div>
+		</div>
+	</div>
+}
+
+templ FDRSchedule(schedule core.FDRSchedule) {
+	<div class="flex flex-col gap-2 overflow-x-scroll sm:overflow-hidden">
+		<div class="sticky grid grid-flow-col-dense gap-2">
+			for i := range(38) {
+				<p class="min-w-16 text-center">GW{ strconv.Itoa(i) }</p>
+			}
+		</div>
+		<div class="flex flex-col gap-4">
+			for i := range schedule {
+				<div class="flex flex-col gap-1">
+					<h2 class="uppercase">{ shared.GetCodeFromClubId(i) }</h2>
+					<div class="grid grid-flow-col-dense gap-2 pb-2">
+						for _, f := range schedule[i] {
+							<div class="flex flex-col gap-2 p-2 rounded-sm font-semibold text-lg min-w-16 min-h-12 text-center" data-difficulty={ strconv.Itoa(f.Difficulty) }>
+								<p class="uppercase">{ shared.GetCodeFromClubId(f.OpponentId) }</p>
+								<small>{ strconv.Itoa(f.Difficulty) }</small>
+							</div>
+						}
+					</div>
 				</div>
 			}
 		</div>
