--- a/components/pages.templ
+++ b/components/pages.templ
@@ -27,7 +27,7 @@ templ layout() {
 		</head>
 		<body class="m-auto max-w-4xl p-4 bg-zinc-950 text-zinc-100">
 			<header>
-				<nav class="flex flex-col sm:flex-row gap-4 justify-between items-center">
+				<nav class="flex flex-col sm:flex-row gap-4 justify-between items-center w-full">
 					<div class="flex flex-col sm:flex-row gap-2 items-center justify-between w-full">
 						<ul>
 							<li>
@@ -49,7 +49,7 @@ templ layout() {
 							</li>
 						</ul>
 					</div>
-					<div class="flex justify-stretch sm:justify-end w-full">
+					<div class="flex sm:w-full">
 						@PlayerSearchBar([]core.Player{})
 					</div>
 				</nav>
@@ -137,16 +137,20 @@ templ EntryPage(entry core.Entry) {
 
 templ PlayerPage(p core.Player, fdr core.FDRSchedule) {
 	@layout() {
-		<div class="flex flex-col gap-4">
-			<div class="flex flex-col sm:flex-row gap-8 justify-center sm:justify-start items-center">
-				<div class="w-24">
-					<img src={ fmt.Sprintf("/static/images/shirts/%s.webp", shared.GetCodeFromClubId(p.ClubId)) } width="96" height="96"/>
-				</div>
+		<div class="flex flex-col gap-4 justify-start items-start w-full">
+			<div class="flex flex-col gap-4 justify-start items-center">
 				<h1>{ p.Name }</h1>
+				<div class="flex gap-2">
+					<div class="w-8">
+						<img src={ fmt.Sprintf("/static/images/shirts/%s.webp", shared.GetCodeFromClubId(p.ClubId)) } width="32" height="32"/>
+					</div>
+					<span>{ shared.GetCodeFromClubId(p.ClubId) }</span>
+				</div>
 			</div>
 			<hr/>
-			<div class="flex flex-col gap-8">
+			<div class="flex flex-col gap-8 max-w-full">
 				@PlayerKeyStats(p)
+				@PlayerPerformanceStats(p)
 				@FDRSchedule(fdr)
 			</div>
 		</div>
